--- a/13-express/homework/Solutions/FriendFinder/package.json
+++ b/13-express/homework/Solutions/FriendFinder/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "tv-search",
+  "name": "friendfinder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.16.3"
+  },
+  "engines": {
+    "node": "5.3.0"
+  }
 }
